--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Style+Script&display=swap');
+
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif, monospace;
   margin: 0;
   padding: 0;
 }
@@ -24,14 +27,21 @@ section {
 #echo-chamber {
   background-color: #f9f9f9;
   padding: 1rem;
+  border-radius: 15px;
 }
 
 #diverse-content {
   background-color: #e8f5e9;
   padding: 1rem;
+  border-radius: 15px;
 }
 
 button {
   margin-top: 1rem;
   padding: 0.5rem 1rem;
+}
+
+.article-title {
+  padding-bottom: 10px;
+  text-decoration: underline;
 }
